--- a/Hospital-Management-System-master/ambulance.html
+++ b/Hospital-Management-System-master/ambulance.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -61,7 +60,7 @@
                         </a>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item" style="margin-right: 40px;">
                         <a class="nav-link js-scroll-trigger" href="contact.html"
                             style="color: white;font-family: 'IBM Plex Sans', sans-serif;">
                             <h6>CONTACT</h6>
@@ -69,7 +68,7 @@
                     </li>
 
 
-                    <li class="nav-item">
+                    <li class="nav-item" style="margin-right: 40px;">
                         <a class="nav-link js-scroll-trigger" href="ambulance.html"
                             style="color: white;font-family: 'IBM Plex Sans', sans-serif;">
                             <h6>AMBULANCE</h6>
@@ -89,7 +88,7 @@
         <div class="contact-image">
             <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact" />
         </div>
-        <form action="ambulance.php"  method="post">
+        <form action="ambulance.php" method="post">
             <h3>Book an Ambulance</h3>
             <div class="row">
                 <div class="col-md-6">
@@ -130,4 +129,4 @@
 </html>
 </body>
 
-</html> 
+</html>
