--- a/Hospital-Management-System-master/contact.html
+++ b/Hospital-Management-System-master/contact.html
@@ -60,7 +60,7 @@
             </a>
           </li>
 
-          <li class="nav-item">
+          <li class="nav-item"     style="margin-right: 40px;"          >
             <a class="nav-link js-scroll-trigger" href="contact.html"
               style="color: white;font-family: 'IBM Plex Sans', sans-serif;">
               <h6>CONTACT</h6>
@@ -68,7 +68,7 @@
           </li>
 
 
-          <li class="nav-item">
+          <li class="nav-item"  style="margin-right: 40px;">
             <a class="nav-link js-scroll-trigger" href="ambulance.html"
               style="color: white;font-family: 'IBM Plex Sans', sans-serif;">
               <h6>AMBULANCE</h6>
