--- a/Hospital-Management-System-master/services.html
+++ b/Hospital-Management-System-master/services.html
@@ -120,7 +120,7 @@
       </button>
       <a class="navbar-brand js-scroll-trigger" href="index.php"
         style="margin-top: 0px;font-family: 'IBM Plex Sans', sans-serif;">
-        <h5 style="color: white;"><i class="fa fa-user-plus" aria-hidden="true"></i>&nbsp GLOBAL HOSPITALS</h5>
+        <h5 style="color: white;"><i class="fa fa-user-plus" aria-hidden="true"></i>&nbsp G13 HOSPITALS</h5>
       </a>
     </div>
 
@@ -151,7 +151,7 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="wow fadeInDown" data-wow-offset="0" data-wow-delay="0.1s">
-                <h2 style="font-family: 'IBM Plex Sans', sans-serif;color: white">GLOBAL HOSPITALS</h2>
+                <h2 style="font-family: 'IBM Plex Sans', sans-serif;color: white">G13 HOSPITALS</h2>
               </div>
               <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.1s">
                 <h4 class="h-light" style="font-family: 'IBM Plex Sans', sans-serif;color: #efe1e1">Provide best quality
@@ -159,8 +159,25 @@
               </div>
               <div class="well well-trans" style="background:#ffffff00;color: white">
                 <div class="wow fadeInRight" data-wow-delay="0.1s">
-
-                  <ul class="lead-list">
+                    <div class="service-desc" style="font-family: 'IBM Plex Sans', sans-serif;color: white">
+                    <p>A name synonymous with 21st century healthcare, B13Hospital and Heart Institute combines
+                      healthcare
+                      expertise, technology, innovative healthcare management, and global outlook, is all set to
+                      redefine the
+                      health care delivery of Bangalore. Adding life to the 300 bed hospital is the renowned team of
+                      doctors
+                      who have been serving the people of the city for over a decade. B13Hospital aspires to be
+                      Bangalore's
+                      finest Hi-Tech corporate hospital, purely –An India’s global hospital. We provide Multispecialty
+                      and
+                      also super specialty medical support through our well qualified and experienced team of doctors
+                      and
+                      supporting staff. With a 1:1 ratio nursing care we are also have the South India’s best Neonatal
+                      Care
+                      Centre that is one of its kind in the world.
+                    </p>
+                  </div>
+                  <!-- <ul class="lead-list">
                     <li><span class="fa fa-check-square-o fa-2x icon-success"></span> <span
                         class="list"><strong>Affordable monthly premium packages</strong><br />Lorem ipsum dolor sit
                         amet, in verterem persecuti vix, sit te meis</span></li>
@@ -170,11 +187,7 @@
                     <li><span class="fa fa-check-square-o fa-2x icon-success"></span> <span class="list"><strong>Only
                           use friendly environment</strong><br />Lorem ipsum dolor sit amet, in verterem persecuti vix,
                         sit te meis</span></li>
-                  </ul>
-                  <p class="text-right wow bounceIn" data-wow-delay="0.4s">
-                    <a href="#" class="btn btn-skin btn-lg" style="background:white;color:#006ccf">Learn more <i
-                        class="fa fa-angle-right"></i></a>
-                  </p>
+                  </ul> -->
                 </div>
               </div>
 
@@ -190,81 +203,17 @@
       </div>
     </section>
 
-
-    <section id="boxes" class="home-section paddingtop-80"
-      style="background: -webkit-linear-gradient(left, #3931af, #00c6ff);color: white;font-family: 'IBM Plex Sans', sans-serif;">
-
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-3 col-md-3">
-            <div class="wow fadeInUp" data-wow-delay="0.3s">
-              <div class="box text-center">
-
-                <i class="fa fa-check fa-3x bg-skin"></i>
-                <h4>Make an appoinment</h4>
-                <p>
-                  Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis
-                  eligendi ne.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-md-3">
-            <div class="wow fadeInUp" data-wow-delay="0.5s">
-              <div class="box text-center">
-
-                <i class="fa fa-list-alt fa-3x bg-skin"></i>
-                <h4>Choose your package</h4>
-                <p>
-                  Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis
-                  eligendi ne.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-md-3">
-            <div class="wow fadeInUp" data-wow-delay="0.7s">
-              <div class="box text-center">
-                <i class="fa fa-user-md fa-3x bg-skin"></i>
-                <h4>Help by specialist</h4>
-                <p>
-                  Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis
-                  eligendi ne.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-md-3">
-
-            <div class="wow fadeInUp" data-wow-delay="0.9s">
-              <div class="box text-center">
-
-                <i class="fa fa-hospital-o fa-3x bg-skin"></i>
-                <h4>Get diagnostic report</h4>
-                <p>
-                  Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis
-                  eligendi ne.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </section>
-
-
     <section id="service" class="home-section nopadding paddingtop-60"
       style="background: -webkit-linear-gradient(left, #3931af, #00c6ff);color: white" style="height: 80%;">
       <div class="container">
 
         <div class="row">
-          <div class="col-sm-6 col-md-6">
+          <div class="col-sm-4 col-md-4">
             <div class="wow fadeInLeft" data-wow-delay="0.2s">
               <img src="img/dummy/img-6.png" class="img-responsive" alt="" />
             </div>
           </div>
-          <div class="col-sm-3 col-md-3">
+          <div class="col-sm-4 col-md-4">
 
             <div class="wow fadeInRight" data-wow-delay="0.1s">
               <div class="service-box">
@@ -272,8 +221,8 @@
                   <span class="fa fa-stethoscope fa-3x" style="color:#0062cc"></span>
                 </div>
                 <div class="service-desc">
-                  <h5 class="h-light">Medical checkup</h5>
-                  <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                  <h5 class="h-light">Dermatology</h5>
+                  <p>Advanced and unmatched dermatological care.</p>
                 </div>
               </div>
             </div>
@@ -284,8 +233,8 @@
                   <span class="fa fa-wheelchair fa-3x" style="color:#0062cc"></span>
                 </div>
                 <div class="service-desc">
-                  <h5 class="h-light">Nursing Services</h5>
-                  <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                  <h5 class="h-light">Clinical Team</h5>
+                  <p>Internationally renowned doctors, providing the best of care.</p>
                 </div>
               </div>
             </div>
@@ -295,15 +244,15 @@
                   <span class="fa fa-plus-square fa-3x" style="color:#0062cc"></span>
                 </div>
                 <div class="service-desc">
-                  <h5 class="h-light">Pharmacy</h5>
-                  <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                  <h5 class="h-light">Eye care</h5>
+                  <p>Quality eye care by always emphasizing customer needs.</p>
                 </div>
               </div>
             </div>
 
 
           </div>
-          <div class="col-sm-3 col-md-3">
+          <div class="col-sm-4 col-md-4">
 
             <div class="wow fadeInRight" data-wow-delay="0.1s">
               <div class="service-box">
@@ -311,8 +260,9 @@
                   <span class="fa fa-h-square fa-3x" style="color:#0062cc"></span>
                 </div>
                 <div class="service-desc">
-                  <h5 class="h-light">Gyn Care</h5>
-                  <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                  <h5 class="h-light">Pediatrics</h5>
+                  <p>Pediatric subspecialties such as neonatology.
+                  </p>
                 </div>
               </div>
             </div>
@@ -324,7 +274,7 @@
                 </div>
                 <div class="service-desc">
                   <h5 class="h-light">Neurology</h5>
-                  <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                  <p>Provide treatments for complex nuerology diseases.</p>
                 </div>
               </div>
             </div>
@@ -335,8 +285,8 @@
                   <span class="fa fa-heartbeat fa-3x"></span>
                 </div>
                 <div class="service-desc">
-                  <h5 class="h-light">Sleep Center</h5>
-                  <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                  <h5 class="h-light">Cardiology</h5>
+                  <p>Multitude of treatments and procedures in cardiology and cardiothoracic surgery.</p>
                 </div>
               </div>
             </div>
@@ -351,33 +301,28 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-6 col-md-3">
             <div class="wow fadeInDown" data-wow-delay="0.1s">
-              <div class="widget">
-                <h5>About Global Hospitals</h5>
-                <p>
-                  Lorem ipsum dolor sit amet, ne nam purto nihil impetus, an facilisi accommodare sea
-                </p>
-              </div>
+
             </div>
             <div class="wow fadeInDown" data-wow-delay="0.1s">
               <div class="widget">
-                <h5>Information</h5>
+                <h5>Useful Links</h5>
                 <ul>
-                  <li><a style="color: #e4d6d6" href="#">Home</a></li>
-                  <li><a style="color: #e4d6d6" href="#">Laboratory</a></li>
-                  <li><a style="color: #e4d6d6" href="#">Medical treatment</a></li>
-                  <li><a style="color: #e4d6d6" href="#">Terms & conditions</a></li>
+                  <li><a style="color: #e4d6d6" href="index.php">Home</a></li>
+                  <li><a style="color: #e4d6d6" href="services.html">About Us</a></li>
+                  <li><a style="color: #e4d6d6" href="contact.html">Contact</a></li>
+                  <li><a style="color: #e4d6d6" href="ambulance.html">Ambulance</a></li>
                 </ul>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-6 col-md-3">
             <div class="wow fadeInDown" data-wow-delay="0.1s">
               <div class="widget">
-                <h5>Global Hospitals</h5>
+                <h5>G13 Hospitals</h5>
                 <p>
-                  Nam leo lorem, tincidunt id risus ut, ornare tincidunt naqunc sit amet.
+                  Krishna Rajendra Rd, Parvathipuram, Vishweshwarapura, Basavanagudi, Bengaluru, Karnataka 560004
                 </p>
                 <ul>
                   <li>
@@ -388,41 +333,33 @@
                   <li>
                     <span class="fa-stack fa-lg">
                       <i class="fa fa-phone fa-stack-1x fa-inverse"></i>
-                    </span> +62 0888 904 711
+                    </span> 080 2661 5865
                   </li>
                   <li>
                     <span class="fa-stack fa-lg">
                       <i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
-                    </span> global@hospitals.com
+                    </span> g13@hospitals.com
                   </li>
 
                 </ul>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-6 col-md-6">
             <div class="wow fadeInDown" data-wow-delay="0.1s">
               <div class="widget">
-                <h5>Our location</h5>
-                <p>The Suithouse V303, Kuningan City, Jakarta Indonesia 12940</p>
+                <div class="footer-links">
+                  <h5>Our Location</h5>
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.2606255763535!2d77.57184291477039!3d12.955167590866703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1592715c4e7f%3A0x7dfaf94e52204678!2sBangalore%20Institute%20of%20Technology!5e0!3m2!1sen!2sin!4v1641067659524!5m2!1sen!2sin"
+                    width="600" height="250"></iframe>
 
+                </div>
               </div>
-            </div>
-            <div class="wow fadeInDown" data-wow-delay="0.1s">
-              <div class="widget">
-                <h5>Follow us</h5>
-                <ul class="company-social">
-                  <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li class="social-google"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                  <li class="social-vimeo"><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
-                  <li class="social-dribble"><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                </ul>
-              </div>
+
             </div>
           </div>
         </div>
-      </div>
 
     </footer>
 
